# emojime

./: EmojiMe.cabal  Procfile  README.md
src/: Main.hs
