name:                EmojiMe
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/narrative/emojime#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable emojime-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , data-default
                     , lucid-svg
                     , http-types
                     , lens
                     , lens-aeson
                     , mtl
                     , random
                     , scotty
                     , text
                     , wai-extra
                     , wreq